Clean up IDE inspection findings
- add @NotNull annotations on Bukkit API overrides
- use pattern variables and pattern switch; drop redundant public in interfaces
- extract shared /invsee & /endersee response handling into CommandFeedback (removes duplicated fragments)
- remove unused executeSyncPlayer(HumanEntity,..) overloads from both schedulers
- remove dead deprecated members (offlinePlayerProvider, itemMaterials, legacy title/template getters)
- guard getCommand() results with requireNonNull; fix unnecessary unboxing
- fix tabcomplete bug: offline-name completion now checks tabCompleteOfflinePlayers() instead of offlinePlayerSupport() twice
- remove commented-out Multiverse-Inventories block from InvseeCommandExecutor

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>